--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
     "expo": "~54.0.25",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
+    "leaflet": "^1.9.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.5.1",
-    "react-native-maps": "1.20.1"
+    "react-native-worklets": "^0.5.1"
   },
   "private": true,
   "devDependencies": {
