--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/drawer": "^7.7.3",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "exceljs": "^4.4.0",
     "expo": "~54.0.25",
+    "expo-image-picker": "~17.0.8",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
     "leaflet": "^1.9.4",
@@ -29,7 +37,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "recharts": "^3.4.1"
   },
   "private": true,
   "devDependencies": {
