feat(notifications): integra expo-notifications; permisos y canal Android en App; badge y dropdown; programación local de actividades pendientes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~54.0.25",
     "expo-image-picker": "~17.0.8",
     "expo-location": "^19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
     "leaflet": "^1.9.4",
     "react": "19.1.0",
