--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "AgroTic",
     "slug": "agrotic",
-    "scheme": null,
+    "scheme": "agrotic",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
