estos cambios el mapa  no le esta funcionando

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-EXPO_PUBLIC_API_URL=http://192.168.101.4:3001
-EXPO_PUBLIC_WEB_URL=agrotic://
+EXPO_PUBLIC_API_URL=https://pseudomonocyclic-momently-angele.ngrok-free.dev
+EXPO_PUBLIC_WEB_URL=https://agrotic.com
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDJ4mbMgGtosk-Y-xpMO6r3qpzF-iS80IU
+GOOGLE_MAPS_API_KEY=AIzaSyDJ4mbMgGtosk-Y-xpMO6r3qpzF-iS80IU
