--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.5",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@babel/runtime": "^7.28.4",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.7.3",
@@ -22,12 +20,16 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
-    "expo": "~54.0.25",
-    "expo-image-picker": "~17.0.8",
-    "expo-location": "^19.0.7",
-    "expo-notifications": "~0.32.13",
-    "expo-status-bar": "~3.0.8",
+    "expo": "~54.0.27",
+    "expo-build-properties": "~1.0.10",
+    "expo-dev-client": "~6.0.20",
+    "expo-image-picker": "~17.0.9",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "^0.32.14",
+    "expo-status-bar": "~3.0.9",
     "leaflet": "^1.9.4",
+    "mqtt": "^5.14.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -39,10 +41,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
-    "recharts": "^3.4.1"
+    "socket.io-client": "^4.8.1"
   },
   "private": true,
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "babel-preset-expo": "^54.0.7"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "^5.6.2"
   }
 }
